--- a/.gitattributes
+++ b/.gitattributes
@@ -1,10 +1,2 @@
-* text=auto
-.editorconfig text eol=lf
-.gitattributes text eol=lf
-.gitignore text eol=lf
-.vscodeignore text eol=lf
-LICENSE text eol=lf
-yarn.lock text eol=lf
-*.json text eol=lf
-*.md text eol=lf
-*.ts text eol=lf
+* text=auto eol=lf
+*.png filter=lfs diff=lfs merge=lfs -text
